2A/05_Projet_GL/src/test/deca/context/invalid/complet/30_return_type_diff.deca
// Description :
//    return : boolean --> int  
// Resultats :
//    ligne 11 : le boolean ne peut pas être affecté à int 
// Historique :
//  cree le 16/01/2024

class A {
    int x ; 
    int getX() {
        return true ; 
    }
}